[refactor] OrderController, OrderService 리팩토링
- 공통 로직 캡슐화
- 단일 책임 원칙을 적용하여 메서드별 역할 분리